remove babel, work on demo app

--- a/app/index.html
+++ b/app/index.html
@@ -9,16 +9,26 @@
 
     <title>Boulevard - Sortable</title>
 
+    <link href="app.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   </head>
 
   <body>
 
-    <h1>Hello World!!</h1>
+    <div class="navbar">
+     <div replace-with="'images/logo.svg'"></div>
+    </div>
+
+    <app></app>
 
     <script type="text/javascript" src="angular/angular.min.js"></script>
     <script type="text/javascript" src="sortable.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="components/app/app.js"></script>
+    <script type="text/javascript" src="components/todoList/todoList.js"></script>
+    <script type="text/javascript" src="directives/replaceWith.js"></script>
 
   </body>
 </html>
