--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <title>Boulevard - Sortable</title>
 
     <link href="app.css" rel="stylesheet" type="text/css">
+    <link href="highlightjs/styles/solarized_dark.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   </head>
@@ -23,11 +24,13 @@
     <app></app>
 
     <script type="text/javascript" src="angular/angular.min.js"></script>
+    <script type="text/javascript" src="highlightjs/highlight.pack.min.js"></script>
     <script type="text/javascript" src="sortable.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="components/app/app.js"></script>
     <script type="text/javascript" src="components/todoList/todoList.js"></script>
+    <script type="text/javascript" src="directives/highlight.js"></script>
     <script type="text/javascript" src="directives/replaceWith.js"></script>
 
   </body>
