--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
     <script src="sortable.js"></script>
     <script src="app.js"></script>
     <script src="directives/highlight.js"></script>
+    <script src="directives/ngTouchDirs.js"></script>
     <script src="directives/replaceWith.js"></script>
     <script src="components/app/app.js"></script>
     <script src="components/todoList/todoList.js"></script>
