--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,12 @@
 
     <app></app>
 
+    <div class="footer">
+      <div>Sortable</div>
+      <div>v<%= version %></div>
+      <a href="<%= repository.url %>" target="_blank">GitHub</a>
+    </div>
+
     <!-- inject:js -->
     <script src="angular/angular.min.js"></script>
     <script src="highlightjs/highlight.pack.min.js"></script>
@@ -34,8 +40,8 @@
     <script src="directives/highlight.js"></script>
     <script src="directives/ngTouchDirs.js"></script>
     <script src="directives/replaceWith.js"></script>
-    <script src="components/app/app.js"></script>
     <script src="components/todoList/todoList.js"></script>
+    <script src="components/app/app.js"></script>
     <!-- endinject -->
 
   </body>
